Paralax Avoid scrolling - hide overflow

--- a/src/sections/Cave/Cave.module.css
+++ b/src/sections/Cave/Cave.module.css
@@ -8,4 +8,6 @@
 
     align-items: stretch;
     justify-content: stretch;
+
+    overflow: hidden /* <- Because of paralax effect */;
 }
